--- a/SistemaIndustrial/SistemaIndustrial.csproj
+++ b/SistemaIndustrial/SistemaIndustrial.csproj
@@ -26,4 +26,6 @@
     <ProjectReference Include="..\SistemaIndustrial.Services\SistemaIndustrial.Services.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
